<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sub_border_top"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:id="@+id/fontSizePick"
            android:text="@string/settings_frag_font_size"
            android:textSize="20sp"
            android:layout_marginRight="15dp"/>

    </Toolbar>

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sub_border_top"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/fontColourPick"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/settings_frag_font_col"
            android:textSize="20sp"
            android:layout_marginRight="15dp"/>

    </Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/settings_frag_clear_all"
        android:id="@+id/clearAllButton"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/settings_frag_clear_attendees"
        android:id="@+id/clearAllAttButton"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</LinearLayout>