<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ViewerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:paddingTop="10dp">

    <Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sub_border_top"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/nameFieldView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:hint="@string/add_meeting_title_hint"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="10dp" />

    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Toolbar
                android:id="@+id/dateBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sub_border_top"
                android:padding="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dateFieldView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:paddingRight="30dp"
                        android:textAlignment="viewStart"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/timeFieldView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:fontFamily="casual"
                        android:textAlignment="textEnd"
                        android:textSize="18sp" />

                </LinearLayout>

            </Toolbar>

            <Toolbar
                android:id="@+id/locBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sub_border_top"
                android:padding="20dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/place_autocomplete_view"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/viewMapBtn"
                        android:background="@android:color/transparent"
                        android:fontFamily="casual"
                        android:textAlignment="viewStart"
                        android:textSize="15sp"
                        android:paddingRight="60dp"
                        android:layout_marginTop="2dp"/>

                </LinearLayout>

            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Toolbar
                    android:id="@+id/peopleBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:background="@drawable/sub_border_top">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/peopleFieldView"
                        android:background="@android:color/transparent"
                        android:fontFamily="casual"
                        android:textAlignment="viewStart"
                        android:textSize="15sp"
                        android:paddingRight="60dp"/>

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/personAutoView"
                            android:background="@android:color/transparent"
                            android:fontFamily="casual"
                            android:textAlignment="viewStart"
                            android:textSize="15sp"
                            android:paddingRight="60dp"
                            android:hint="@string/add_meeting_auto_hint"/>

                    </LinearLayout>

                </Toolbar>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/add_meeting_add_p_button"
                    android:id="@+id/addPersonView"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/clearButton"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/button"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/add_meeting_clear"
                    android:id="@+id/clearPerson"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/clearButton"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/button"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>


            </LinearLayout>

            <Toolbar
                android:id="@+id/notesBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sub_border_top"
                android:padding="30dp">

                <EditText
                    android:id="@+id/notesFieldView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:fontFamily="casual"
                    android:hint="@string/add_meeting_notes"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"/>

            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/add_meeting_save_button"
                    android:id="@+id/saveButton"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:background="@drawable/button"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/view_meeting_g_calendar"
                    android:id="@+id/addToGoogle"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:background="@drawable/button"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/view_meeting_invites"
                    android:id="@+id/sendInvite"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:background="@drawable/button"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>